Spelling fixes all round

--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -24,9 +24,9 @@ ott_air_designs:0 "Allowed aircraft licensing"
 ott_air_designs_rejected:0 "Refused to sell licence"
 ott_naval_dominance:0 "Ottoman naval dominance"
 ott_gen_1:0 "Armed rebels"
-ott_gen_2:0 "Organized revolt"
+ott_gen_2:0 "Organised revolt"
 ott_gen_3:0 "Infiltrated Ottoman Army"
-ott_arab_gen_1:0 "Organized revolt"
+ott_arab_gen_1:0 "Organised revolt"
 ott_arab_gen_2:0 "Armed rebels"
 ott_arab_gen_3:0 "Hashemite spy networks"
 
@@ -248,7 +248,7 @@ OTT_gulf_of_basra_desc:0 ""
 
 ### Events ###
 ott.1.t:0 "The Eternal State"
-ott.1.d:0 "Once the greatest empire in existence, spanning three continents and ruling over millions of people the Ottoman Empire had declined by the late 19th century, to the point of being known as the 'sick man of europe'. An inability to industrialise, the inexistence of an educated middle-class, and a chronic lack of funds meant that the Ottoman State had dropped back well behind the European powers by 1876, when Abdülhamid II took the throne. At the time, the Ottoman army was still reeling from the shock of Russo-Turkish war of 1877, the Ottoman treasury had just declared bankrupcy and several interest groups were scheming to obtain political control of the Empire. These weaknesses led the Empire to seek closer cooperation with European powers. Prussian military successes against France led the Empire to form military and economic ties with the Germans, culminating in the construction of the Berlin-Baghdad railway in 1888. During his reign Abdülhamid II launched massive education programs and made desperate diplomatic maneuvers to keep his Empire intact; while at the same time he engaged in systematic repression of opposition groups in an effort to maintain his absolute rule. Despite these efforts, a revolt of 'The Young Turks' in 1908, the subsequent dethronement of Abdülhamid II in 1909, and a bloody coup in 1913 meant that in the days leading to the Weltkrieg, The Ottoman Empire was ruled by a corrupt triumvirate of 'Three Pashas'; Enver, Talat and Cemal. In 1914, as the Weltkrieg began in Europe, the Young Turk government signed a secret treaty with the Germans and soon after joined the war against the Entente powers..."
+ott.1.d:0 "Once the greatest empire in existence, spanning three continents and ruling over millions of people the Ottoman Empire had declined by the late 19th century, to the point of being known as the 'sick man of Europe'. An inability to industrialise, the nonexistence of an educated middle-class, and a chronic lack of funds meant that the Ottoman State had dropped back well behind the European powers by 1876, when Abdülhamid II took the throne. At the time, the Ottoman army was still reeling from the shock of Russo-Turkish war of 1877, the Ottoman treasury had just declared bankruptcy and several interest groups were scheming to obtain political control of the Empire. These weaknesses led the Empire to seek closer cooperation with European powers. Prussian military successes against France led the Empire to form military and economic ties with the Germans, culminating in the construction of the Berlin-Baghdad railway in 1888. During his reign Abdülhamid II launched massive education programs and made desperate diplomatic manoeuvres to keep his Empire intact; while at the same time he engaged in systematic repression of opposition groups in an effort to maintain his absolute rule. Despite these efforts, a revolt of 'The Young Turks' in 1908, the subsequent dethronement of Abdülhamid II in 1909, and a bloody coup in 1913 meant that in the days leading to the Weltkrieg, The Ottoman Empire was ruled by a corrupt triumvirate of 'Three Pashas'; Enver, Talat and Cemal. In 1914, as the Weltkrieg began in Europe, the Young Turk government signed a secret treaty with the Germans and soon after joined the war against the Entente powers..."
 ott.1.a:0 "God save the Empire..."
 
 ott.2.t:0 "Black Monday hits Ottoman Empire!"
@@ -316,7 +316,7 @@ ott.16.d:0 "As the Ottoman Gendarmerie failed to defuse the situation, Kurdish r
 ott.16.a:0 "We'll See..."
 
 ott.17.t:0 "Report from the East"
-ott.17.d:0 "With regions inhabitated by Kurds in open rebellion, the stability of the Ottoman Empire is on the verge of collapse since one succesful uprising can cause a Domino effect in our Arabian provinces and subject states. We must crush this uprising quickly."
+ott.17.d:0 "With regions inhabited by Kurds in open rebellion, the stability of the Ottoman Empire is on the verge of collapse since one successful uprising can cause a Domino effect in our Arabian provinces and subject states. We must crush this uprising quickly."
 ott.17.a:0 "Crush the enemies of the Devlet-i Aliye!"
 ott.17.b:0 "Perhaps they deserve independence..."
 
@@ -427,19 +427,19 @@ ott.39.d:0 "With the weakness of our empire clearly exposed by the latest series
 ott.39.a:0 "Another revolt!"
 
 ott.40.t:0 "Cypriot Uprising!"
-ott.40.d:0 "With regions inhabitated by Cypriot Greeks declaring independence from us, the stability of our empire is further endangered. Turkish Cypriots are organising in the north, and this could give us the opportunity to send reinforcements before the Greek forces manage overrun the whole island. We must crush this uprising quickly."
+ott.40.d:0 "With regions inhabited by Cypriot Greeks declaring independence from us, the stability of our empire is further endangered. Turkish Cypriots are organising in the north, and this could give us the opportunity to send reinforcements before the Greek forces manage overrun the whole island. We must crush this uprising quickly."
 ott.40.a:0 "Very well, commence Operation Atilla."
 ott.40.b:0 "Let them have their independence..."
 
 ott.41.t:0 "Cypriot uprising crushed!"
-ott.41.d:0 "Our military has succesfully taken control of Cyprus. Once again their uprising was futile."
+ott.41.d:0 "Our military has successfully taken control of Cyprus. Once again their uprising was futile."
 ott.41.a:0 "These Greeks will never learn from the past!"
 
 ott.42.t:0 "Destroying the Cypriot fortifications"
 ott.42.d:0 "The Cypriot uprising was crushed by our invincible army, but in some parts of their territory, the forts remained. These are useless for us but future rebels could use them - against us. What shall we do?"
 ott.42.a:0 "Destroy them! And carve the Ottoman flag into the mountain while you are at it..."
 
-ott.43.t:0 "Greek Cypriots succesfully resist!"
+ott.43.t:0 "Greek Cypriots successfully resist!"
 ott.43.d:0 "Our armed forces could not break apart the rebellious state of Cyprus. Some members of the general staff suggest that continuing with this fruitless effort greatly weakens our forces facing the hostile Arabian states of Hashemite Arabia and Egypt. Shall we recognise the independence of Cyprus?"
 ott.43.a:0 "Accept their independence..."
 ott.43.b:0 "Never!"
@@ -478,7 +478,7 @@ ott.50.a:0 "Crush this upstart!"
 ott.50.b:0 "Let them go"
 
 ott.51.t:0 "Armenia still exists!"
-ott.51.d:0 "Even the concentration of our elite armed forces could not break apart the rebellious state of Armenia. Some members of the general staff suggest that continuing with this fruitless effort greatly weakens our forces facing the hostile Arabian states of Hashemite Arabia and Egypt. Shall we recognize the independence of Armenia?"
+ott.51.d:0 "Even the concentration of our elite armed forces could not break apart the rebellious state of Armenia. Some members of the general staff suggest that continuing with this fruitless effort greatly weakens our forces facing the hostile Arabian states of Hashemite Arabia and Egypt. Shall we recognise the independence of Armenia?"
 ott.51.a:0 "Accept their independence..."
 ott.51.b:0 "Never!"
 
@@ -571,7 +571,7 @@ ott.70.d:0 "According to the Treaty of Damascus we must withdraw our force from 
 ott.70.a:0 "A shameful display!"
 
 ott.71.t:0 "German Empire in disarray"
-ott.71.d:0 "With the German Empire in turmoil, we have a great oportunity to seize the Suez canal. There is very little that the German Empire can do to stop us at this point."
+ott.71.d:0 "With the German Empire in turmoil, we have a great opportunity to seize the Suez canal. There is very little that the German Empire can do to stop us at this point."
 ott.71.a:0 "Seize control of Suez!"
 ott.71.b:0 "Rather not"
 
@@ -618,7 +618,7 @@ ott.81.d:0 "The German government has refused the deal! Even though we reached a
 ott.81.a:0 "We don't need their flying trashcans anyway..."
 
 ott.82.t:0 "Black Sea Naval Supremacy"
-ott.82.d:0 "'The Black Sea would storm / As it looked at the Turkish flag!' \nExpansion and modernisation of our naval bases on the Marmara and Black Sea coasts appear to have tipped the regional balance of power in our favor. As we now have a firm grip on their access to Mediterranean, other navies of the Black Sea are visibly bewildered; and the pair of 355mm Krupp guns we installed on Rumeli and Anadolu Hisarı just add insult to the injury."
+ott.82.d:0 "'The Black Sea would storm / As it looked at the Turkish flag!' \nExpansion and modernisation of our naval bases on the Marmara and Black Sea coasts appear to have tipped the regional balance of power in our favour. As we now have a firm grip on their access to Mediterranean, other navies of the Black Sea are visibly bewildered; and the pair of 355mm Krupp guns we installed on Rumeli and Anadolu Hisarı just add insult to the injury."
 ott.82.a:0 "Give way to the flag of the Turk!"
 
 ott.83.t:0 "Eastern Mediterranean Naval Supremacy"
@@ -638,7 +638,7 @@ ott.86.d:0 "At [GetDateText], soldiers entered the Cemile Sultan Palace to disba
 ott.86.a:0 "No longer shall we suffer from two-headedness"
 
 ott.87.t:0 "Shut down the political parties?"
-ott.87.d:0 "Following the dissolvement of the Parliament, political parties of all ideologies began criticising the decision, with liberal ideologues even going so far as to call the Imperial Decrees 'tyrannical'. Opposition to the Sultan is growing day by day, and even the resident monarchists in the Selamet-i Osmaniye Party are having a hard time defending the situation, meanwhile several spontaneous protests have materialized in the capital. Should we really allow these pesky agitators to roam free in the city?"
+ott.87.d:0 "Following the dissolvement of the Parliament, political parties of all ideologies began criticising the decision, with liberal ideologues even going so far as to call the Imperial Decrees 'tyrannical'. Opposition to the Sultan is growing day by day, and even the resident monarchists in the Selamet-i Osmaniye Party are having a hard time defending the situation, meanwhile several spontaneous protests have materialised in the capital. Should we really allow these pesky agitators to roam free in the city?"
 ott.87.a:0 "Proceed with the arrests of politicians"
 ott.87.b:0 "Allow them to exist and operate freely"
 
@@ -652,7 +652,7 @@ ott.89.d:0 "Attempts to arrest protesters and end the riots rapidly took a turn 
 ott.89.a:0 "This does not bode well..."
 
 ott.90.t:0 "The New Reformers?"
-ott.90.d:0 "The massacre at Beşiktaş provoked a major outrage from the public. Following a series of threats from more extremist and disgruntled sectors of our society, major opposition parties, and also pressure from the army high command, the undersecretary of Ministry of the Interior proposed the reinstation of Constitution, and a major reshuffling of our government in order to appease the dissenters and maybe bring some stability back to the Empire. Shall we proceed?"
+ott.90.d:0 "The massacre at Beşiktaş provoked a major outrage from the public. Following a series of threats from more extremist and disgruntled sectors of our society, major opposition parties, and also pressure from the army high command, the undersecretary of Ministry of the Interior proposed the reinstatement of Constitution, and a major reshuffling of our government in order to appease the dissenters and maybe bring some stability back to the Empire. Shall we proceed?"
 ott.90.a:0 "What are you waiting for? Swear them in!"
 ott.90.b:0 "Supress the malcontents by force of arms!"
 
@@ -661,7 +661,7 @@ ott.91.d:0 "General unrest has turned into rioting and mob rule in our capital! 
 ott.91.a:0 "Those drunks entered the mosque with their shoes on!"
 
 ott.92.t:0 "Prince Sabahaddin Agitates!"
-ott.92.d:0 "Prince Mehmed Sabahaddin, leader of the Liberal Entente, has started organizing protests against what he calls 'The Tyranny of Absolute Rule'. A grandson of Abdülmecid I and related to the House of Osman through his mother, the veteran liberal politician is on the forefront of the opposition movement. It would be wise to drive him out of this country, if our reforms are to succeed..."
+ott.92.d:0 "Prince Mehmed Sabahaddin, leader of the Liberal Entente, has started organising protests against what he calls 'The Tyranny of Absolute Rule'. A grandson of Abdülmecid I and related to the House of Osman through his mother, the veteran liberal politician is on the forefront of the opposition movement. It would be wise to drive him out of this country, if our reforms are to succeed..."
 ott.92.a:0 "Force him into exile!"
 ott.92.b:0 "Let him agitate"
 
@@ -741,10 +741,10 @@ ott.110.d:0 "It has been several months since we formally adopted the metric sys
 ott.110.a:0 "Who hired all these useless officials?!"
 
 ott.111.t:0 "Corrupt Bureaucracy"
-ott.111.d:0 "The notoriously widespread corruption in the Ottoman bureaucracy is a long-established phenomenon. Over the centuries, low wages and even lower moral standards of Ottoman government officials resulted in the gradual acceptance and normalisation of bribery as a means of income. Legitimized under terms such as 'hediye' and 'caize', corruption became so commonplace that several Ottoman sultans were recorded to have accepted bribes. Many efforts to curtail corruption were made over the centuries, none of them successful. Unfortunately, it appears that our coordinated efforts to end bribery are about to meet the same fate. The reforms we instituted, which include new laws and severe penalties, are being casually disregarded by the old-headed bureaucrats, almost all of whom are feeling quite secure in their entrenched positions in the government. Several reports we have received indicate that any action taken against these corrupt officials are quickly covered-up by complicit superiors and high officials. It appears that eliminating corruption will not be an easy task."
+ott.111.d:0 "The notoriously widespread corruption in the Ottoman bureaucracy is a long-established phenomenon. Over the centuries, low wages and even lower moral standards of Ottoman government officials resulted in the gradual acceptance and normalisation of bribery as a means of income. Legitimised under terms such as 'hediye' and 'caize', corruption became so commonplace that several Ottoman sultans were recorded to have accepted bribes. Many efforts to curtail corruption were made over the centuries, none of them successful. Unfortunately, it appears that our coordinated efforts to end bribery are about to meet the same fate. The reforms we instituted, which include new laws and severe penalties, are being casually disregarded by the old-headed bureaucrats, almost all of whom are feeling quite secure in their entrenched positions in the government. Several reports we have received indicate that any action taken against these corrupt officials are quickly covered-up by complicit superiors and high officials. It appears that eliminating corruption will not be an easy task."
 ott.111.a:0 "Reinstitute the anti-bribery oath!"
 
-ott.112.t:0 "Report on Corrupion"
+ott.112.t:0 "Report on Corruption"
 ott.112.d1:0 ""
 ott.112.d2:0 ""
 ott.112.a:0 "I want action on this!"
@@ -975,7 +975,7 @@ ott.165.a:0 "We have no choice"
 ott.165.b:0 "Let them come, we fear no Turk!"
 
 ott.166.t:0 "Yemen submits!"
-ott.166.d:0 "The Zaydi Imam wisely agreed to fulfill his treaty obligations. The former Yemen Vilayet is once again under our control."
+ott.166.d:0 "The Zaydi Imam wisely agreed to fulfil his treaty obligations. The former Yemen Vilayet is once again under our control."
 ott.166.a:0 "Great!"
 
 ott.167.t:0 "Yemen resists!"
