--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -328,10 +328,10 @@ plcommon.40.t:0 "Anniversary of the Lublin Union"
 plcommon.40.d:0 "Today we celebrate the anniversary of the signature of the Lublin Union, which, for the first time in history, created a united Polish-Lithuanian state."
 plcommon.40.a:0 "Commonwealth is Eternal"
 plcommon.41.t:0 "Lithuania Rebels!"
-plcommon.41.d:0 "After our increasingly anti-Lithuanian policies led to the effective dissolution of the Commonwealth, the Lithuanians have been fmuing under the Polish bootheel. Today, the Lithuanian government, rallying around nationalist Augustinas Voldemaras, have declared that they will no longer be a part of antion dominated by Polish oppressors, and have declared their total independence!"
+plcommon.41.d:0 "After our increasingly anti-Lithuanian policies led to the effective dissolution of the Commonwealth, the Lithuanians have been fuming under the Polish bootheel. Today, the Lithuanian government, rallying around nationalist Augustinas Voldemaras, have declared that they will no longer be a part of antion dominated by Polish oppressors, and have declared their total independence!"
 plcommon.41.a:0 "They will die for this!"
 plcommon.42.t:0 "Poland Rebels!"
-plcommon.42.d:0 "After our increasingly anti-Polish policies led to the effective dissolution of the Commonwealth, the Poles have been fmuing under the Lithuanian bootheel. Today, the Polish government, rallying around nationalist Roman Dmowski, have declared that they will no longer be a part of antion dominated by Lithuanian oppressors, and have declared their total independence!"
+plcommon.42.d:0 "After our increasingly anti-Polish policies led to the effective dissolution of the Commonwealth, the Poles have been fuming under the Lithuanian bootheel. Today, the Polish government, rallying around nationalist Roman Dmowski, have declared that they will no longer be a part of antion dominated by Lithuanian oppressors, and have declared their total independence!"
 plcommon.42.a:0 "They will die for this!"
 plcommon.43.t:0 "Voldemaras' Army"
 plcommon.43.d:0 "to-do"
@@ -348,7 +348,7 @@ plcommon.46.d:0 "to-do"
 plcommon.46.a:0 "The coup succeeds."
 plcommon.46.b:0 "Hold them back!"
 plcommon.47.t:0 "Lithuanian Nationalists Sieze the Commonwealth!"
-plcommon.47.d:0 "Earlier today, the Lithuanian Nationalist LTIP Party siezed control of the government of the Commonwealth, arresting the king Mendog III and placing Augustinas Voldemaras in charge of the nation. Voldemaras officially withdrew the Commonwealth from Mitteleuropa and declared that the Commonwealth is now free from 'German domination.' We need to respond to this crisis immediately, so what should we do?"
+plcommon.47.d:0 "Earlier today, the Lithuanian Nationalist LTIP Party seized control of the government of the Commonwealth, arresting the king Mendog III and placing Augustinas Voldemaras in charge of the nation. Voldemaras officially withdrew the Commonwealth from Mitteleuropa and declared that the Commonwealth is now free from 'German domination.' We need to respond to this crisis immediately, so what should we do?"
 plcommon.47.a:0 "It is not our problem."
 plcommon.47.b:0 "Traitors!"
 plcommon.48.t:0 "Revenge on the Commonwealth"
