--- a/localisation/KR_Afghanistan_l_english.yml
+++ b/localisation/KR_Afghanistan_l_english.yml
@@ -27,7 +27,7 @@ afg.4.d:0 "Foolishly, the British lapdogs have refused our rightful claims."
 afg.4.a:0 "The war continues!"
 
 afg.5.t:0 "Shia Muslims Flee The War"
-afg.5.d:0 "For decades the situation of the Shia minority in Afghanistan have been bad, the post-war situation wasn't gold, and another war could possibly only make it worse. Shia imams in the provinces of Herat and Farah have encouraged the shia minority to flee into their friendly neighbor Persia. Let's hope the Persians send them back, we need that manpower."
+afg.5.d:0 "For decades the situation of the Shia minority in Afghanistan have been bad, the post-war situation wasn't gold, and another war could possibly only make it worse. Shia imams in the provinces of Herat and Farah have encouraged the shia minority to flee into their friendly neighbour Persia. Let's hope the Persians send them back, we need that manpower."
 afg.5.a:0 "Traitors!"
 
 afg.6.t:0 "Refugees from Afghanistan"
@@ -60,7 +60,7 @@ afg.11.a:0 "Let us align with the Islamic Federation of Turkestan!"
 afg.11.b:0 "As long as the country lies in ruins, we can't engage in foreign policy."
 
 afg.12.t:0 "Alliance Negotiations with the Islamic Emirate of Afghanistan"
-afg.12.d:0 "In Afghanistan, the degenerate monarchy of Amanullah has been overthrown by an islamic revolt spearheaded by Habibullah Kalakani. Finally in total control of the country, Habibullah has approached us with an offer of alliance, hoping that the might of the Islamic Federation will dissuade enemies both foreign and domestic from attempting to overthrow his most righteous regime."
+afg.12.d:0 "In Afghanistan, the degenerate monarchy of Amanullah has been overthrown by an Islamic revolt spearheaded by Habibullah Kalakani. Finally in total control of the country, Habibullah has approached us with an offer of alliance, hoping that the might of the Islamic Federation will dissuade enemies both foreign and domestic from attempting to overthrow his most righteous regime."
 afg.12.a:0 "A most righteous proposition! We accept!"
 afg.12.b:0 "We shan't have anything to do with usurpers!"
 
@@ -73,12 +73,12 @@ afg.14.d:0 "Having assumed the throne through not so cordial methods and despite
 afg.14.a:0 "Call a loya jirga to confirm my ascension!"
 
 afg.15.t:0 "Mohammed Nadir Shah and the Loya Jirga"
-afg.15.d:0 "Speaking before the Grand Assembly of tribal leaders, Nadir Shah hopes to recieve enough support to continue his rule unhindered."
+afg.15.d:0 "Speaking before the Grand Assembly of tribal leaders, Nadir Shah hopes to receive enough support to continue his rule unhindered."
 afg.15.a:0 "The assembly hails Mohammed Nadir as king!"
 afg.15.b:0 "The assembly denounces Mohammed Nadir!"
 
 afg.16.t:0 "Nadir Shah's Royal Oligarchy"
-afg.16.d:0 "With the war-torn country finally resembling some kind of order, Nadir Shah has resolved to reorganize his cabinet to secure continued stability for Afghanistan. Packing the government with relatives would be the obvious way to bind the state apparatus to Nadir's ambitions, but reaching out to some of Amanullah's supporters might also bridge a wide gap between the radical and moderate reformists."
+afg.16.d:0 "With the war-torn country finally resembling some kind of order, Nadir Shah has resolved to reorganise his cabinet to secure continued stability for Afghanistan. Packing the government with relatives would be the obvious way to bind the state apparatus to Nadir's ambitions, but reaching out to some of Amanullah's supporters might also bridge a wide gap between the radical and moderate reformists."
 afg.16.a:0 "Let my younger brother, Shah Wali Khan, enforce my will!"
 afg.16.b:0 "My brother, Muhammed Hashim, will head the government!"
 afg.16.c:0 "The meek academic Muhammed Ghobar shall 'lead' the cabinet!"
@@ -86,9 +86,9 @@ afg.16.e:0 "Woo Ammanulah's clique and appoint Abdul Hadi Dawai!"
 afg.16.f:0 "Total royal control! I shall solely wield all executive power!"
 
 afg.17.t:0 "Status of Amanullah's Reforms"
-afg.17.d:0 "Mohammed Nadir Shah has taken control of our shaken nation after the failure of Amanullah Khan to enfore Afghan progress. Well aware that a great contributing factor of his predecessor's downfall was the speed of his westernization reforms, Nadir Shah none the less has to address the great issue of rebuilding Afghanistan."
-afg.17.a:0 "Discontinue social reform, but galvanize the improvement of our infrastructure!"
-afg.17.b:0 "Cave in to the traditionalists and abbandon all pretense of modernity!"
+afg.17.d:0 "Mohammed Nadir Shah has taken control of our shaken nation after the failure of Amanullah Khan to enfore Afghan progress. Well aware that a great contributing factor of his predecessor's downfall was the speed of his westernisation reforms, Nadir Shah none the less has to address the great issue of rebuilding Afghanistan."
+afg.17.a:0 "Discontinue social reform, but galvanise the improvement of our infrastructure!"
+afg.17.b:0 "Cave in to the traditionalists and abandon all pretence of modernity!"
 afg.17.c:0 "I shall succeed where Amanullah failed and bring Afghanistan into the modern world!"
 
 ### Parties ###
@@ -112,7 +112,6 @@ AFG_paternal_autocrat_party:0 "RG"
 AFG_paternal_autocrat_party_long:0 "Royal Government"
 AFG_national_populist_party:0 "RI"
 AFG_national_populist_party_long:0 "Radical Islamists"
-
 
 ### Tooltips ###
 AFG_chaos_tooltip:0 "This choise will put Afganistan into chaos of rebellion. In case of government falls either Radical Islamist or Nadir Shah will rule the country."
