--- a/localisation/KR_Equip_Air_l_english.yml
+++ b/localisation/KR_Equip_Air_l_english.yml
@@ -1447,3 +1447,141 @@ CHI_fighter_equipment_2_short:0 "X-P0"
 
 CHI_CAS_equipment_1:0 "CAMCO Vultee V-11"
 CHI_CAS_equipment_1_short:0 "Vultee V-11"
+
+# Ones with Their own portraits
+SIA_fighter_equipment_0:0 "Fighter Type-5 Prajadhipok"
+SIA_fighter_equipment_0_short:0 "Prajadhipok"
+SIA_fighter_equipment_0_desc:0 "The Prajadhipok, also known as Fighter Type 5, was a single-seat fighter, the second indigenous Siamese aircraft design. In 1929, Lieutenant Colonel Luang Neramit Baijayonta designed the aircraft, which was named Prajadhipok after His Majesty King Prajadhipok (Rama VII). It was the second aircraft designed and built in Siam and the first Siamese designed and built fighter, now called Fighter Type 5."
+SIA_tac_bomber_equipment_0:0 "Bomber Type-2 Boripatra"
+SIA_tac_bomber_equipment_0_short:0 "Boripatra"
+SIA_tac_bomber_equipment_0_desc:0 "The Baribatra (also spelled Boripatra or Boriphat) or Bomber Type 2 was a two-seater light bomber aircraft of the 1920s designed and built by the Royal Siamese Air Force's Aeronautical Workshops. A small number were built for the Siamese Air Force, with the type being the first Siamese-designed aircraft."
+SIA_fighter_equipment_1:0 "Nakajima Ki-27"
+SIA_fighter_equipment_1_desc:0 "Light airframes been revolutionised with the introduction of radial engines, monoplane designs and all metal skin construction. This design is our attempt at creating our first modern fighter plane."
+SIA_fighter_equipment_1_short:0 "Ki-27"
+SIA_fighter_equipment_2:0 "Nakajima Ki-43 Hayabusa"
+SIA_fighter_equipment_2_short:0 "Ki-43 Hayabusa"
+SIA_fighter_equipment_2_desc:0 "The pace of fighter advancements is astounding, and as such, we must continue to incorporate the technology as well as improve upon existing concepts. Our new fighter design must be capable of high speed, high performance at altitude and the best range possible. Additionally, it must be very well armed."
+SIA_CAS_equipment_1:0 "Kawasaki Ki-30"
+SIA_CAS_equipment_1_short:0 "Ki-30"
+SIA_CAS_equipment_1_desc:0 "Our CAS doctrine requires an aircraft capable of precision surface attack. While these aircraft carry a lesser payload compared to our larger Tactical Bombers, they are capable of attacking and destroying small targets of opportunity through strafing and dive bombing."
+SIA_heavy_fighter_equipment_1:0 "Curtiss Hawk 75N"
+SIA_heavy_fighter_equipment_1_short:0 "Hawk 75N"
+SIA_heavy_fighter_equipment_1_desc:0 "Our bomber force needs escort protection from enemy fighters all the way to their targets and back. In order to provide this escort, we must design fighter aircraft with bomber range. Out of necessity these aircraft are larger, slower and less agile than light fighters, though they can carry significant armament."
+SIA_tac_bomber_equipment_1:0 "Martin B-10"
+SIA_tac_bomber_equipment_1_short:0 "B-10"
+SIA_tac_bomber_equipment_1_desc:0 "Medium bombers need to be versatile and fast, capable of fulfilling a range of roles. A twin-engined design, remaining relatively light, can continue to be of use for many years to come."
+SIA_tac_bomber_equipment_2:0 "Mitsubishi Ki-21"
+SIA_tac_bomber_equipment_2_short:0 "Ki-21"
+SIA_tac_bomber_equipment_2_desc:0 "Heavier designs of tactical bombers can extend range, payload and speed while maintaining the planes' capacity to perform a wide variety of missions."
+
+# Siamese Fighters
+SIA_fighter_equipment_3:0 "Siamese Aeronautics SA-46 Pankhana"
+SIA_fighter_equipment_3_short:0 "SA-46 Pankhana"
+SIA_fighter_equipment_3_desc:0 "While our previous generations of fighter plane have proven worthy, any advantage gained by a better design should be taken. This aircraft will be the pinnacle platform of piston-engined fighter that will have excellent power, high agility, deadly weaponry and good range."
+
+# Siamese heavy fighter
+SIA_heavy_fighter_equipment_2:0 "Siamese Aeronautics SA-12 Paksin"
+SIA_heavy_fighter_equipment_2_short:0 "SA-12 Paksin"
+SIA_heavy_fighter_equipment_2_desc:0 "The war has taught us that our heavy fighter design is vulnerable to more nimble fighters, but quite good at the interception of enemy bombers due to heavy armament. This next design will focus on increased attack capability against enemy aircraft and even ground targets. Its speed and range will be improved as well."
+SIA_heavy_fighter_equipment_3:0 "Siamese Aeronautics SA-14 Tichakorn"
+SIA_heavy_fighter_equipment_3_short:0 "SA-14 Tichakorn"
+SIA_heavy_fighter_equipment_3_desc:0 "Though our heavy fighter force has shown adeptness in various roles, we must consider a new design that will enhance its ability relative to enemy fighters, as well as allow it to continue intercepting increasingly faster and better defended enemy bombers."
+
+# Siamese strategic bomber
+SIA_strat_bomber_equipment_1:0 "Siamese Aeronautics SA-71 Kachatarn"
+SIA_strat_bomber_equipment_1_short:0 "SA-71 Kachatarn"
+SIA_strat_bomber_equipment_1_desc:0 "Experiences from the Great War and studies since show that bombing the enemy's military targets and major cities will win the next war. At the very least, we must have a bomber capable of delivering such destruction. It will need to fly high and at good speed, and it must carry a large payload. This will require a large airframe with multiple engines. It will also have some defensive capability."
+SIA_strat_bomber_equipment_2:0 "Siamese Aeronautics SA-72 Hatsadin"
+SIA_strat_bomber_equipment_2_short:0 "SA-72 Hatsadin"
+SIA_strat_bomber_equipment_2_desc:0 "Bombing has been shown to have good effect upon the capacity of the enemy to wage war. More defensive weaponry and increased speed will allow a new design to avoid destruction, while increasing the payload and range will make it more effective."
+SIA_strat_bomber_equipment_3:0 "Siamese Aeronautics SA-75 Karin"
+SIA_strat_bomber_equipment_3_short:0 "SA-75 Karin"
+SIA_strat_bomber_equipment_3_desc:0 "To avoid losses to enemy fighters and ground fire, our next design will fly at great altitude. It will be larger to carry both an enormous payload and more fuel, to increase range."
+
+# Siamese tactical bomber
+SIA_tac_bomber_equipment_3:0 "Siamese Aeronautics SA-60 Atsawa"
+SIA_tac_bomber_equipment_3_short:0 "SA-60 Atsawa"
+SIA_tac_bomber_equipment_3_desc:0 "Taking a page from the advancements in fighter planes, unconventional materials and shapes can make new designs some of the fastest and best performing twin-engine planes ever built."
+
+# Siamese naval bomber
+SIA_nav_bomber_equipment_1:0 "Siamese Aeronautics SA-33 Matsaya"
+SIA_nav_bomber_equipment_1_short:0 "SA-33 Matsaya"
+SIA_nav_bomber_equipment_1_desc:0 "Naval aviation will be vital in the coming decade to confronting new developments in naval warfare, such as the increased importance of submarines. Seaplanes with capacity to work as dive bombers and recon vehicles will be of use."
+SIA_nav_bomber_equipment_2:0 "Siamese Aeronautics SA-33/15 Chonlajorn"
+SIA_nav_bomber_equipment_2_short:0 "SA-33/15 Chonlajorn"
+SIA_nav_bomber_equipment_2_desc:0 "New engine technology and aerodynamically refined designs will boost the speed and diving attack capability of naval planes significantly."
+SIA_nav_bomber_equipment_3:0 "Siamese Aeronautics SA-39 Ampuchar"
+SIA_nav_bomber_equipment_3_short:0 "SA-39 Ampuchar"
+SIA_nav_bomber_equipment_3_desc:0 "All-metal designs and powerful airbrakes allow for more complex naval aeronautics. The planes of the future will demand a larger crew to operate these advanced systems, however."
+
+# Siamese close air support
+SIA_CAS_equipment_2:0 "Siamese Aeronautics SA-57 Kraisee"
+SIA_CAS_equipment_2_short:0 "SA-57 Kraisee"
+SIA_CAS_equipment_2_desc:0 "Early war experiences have shown that increased speed, armour and manoeuvrability are necessary for CAS aircraft survivability against enemy fighters and ground fire. This next generation of ground attack aircraft will also utilise larger bombs, cannons and machineguns to inflict greater damage to their targets."
+SIA_CAS_equipment_3:0 "Siamese Aeronautics SA-59 Pa-yhak"
+SIA_CAS_equipment_3_short:0 "SA-59 Pa-yhak"
+SIA_CAS_equipment_3_desc:0 "The ever increasing capability of target AA and enemy interceptors require further evolution of our CAS aircraft. The new design incorporates increased engine power, airframe improvements for increased diving capability and protection, as well as even greater payloads."
+
+# Siamese carrier bomber
+SIA_cv_nav_bomber_equipment_1:0 "Siamese Aeronautics SA-33N Kulau"
+SIA_cv_nav_bomber_equipment_1_short:0 "SA-33N Kulau"
+SIA_cv_nav_bomber_equipment_1_desc:0 "An early naval bomber modified to launch from and land on aircraft carriers."
+SIA_cv_nav_bomber_equipment_2:0 "Siamese Aeronautics SA-33/35N Jalamed"
+SIA_cv_nav_bomber_equipment_2_short:0 "SA-33/35N Jalamed"
+SIA_cv_nav_bomber_equipment_2_desc:0 "An improved naval bomber modified to launch from and land on aircraft carriers."
+SIA_cv_nav_bomber_equipment_3:0 "Siamese Aeronautics SA-39N Tapien"
+SIA_cv_nav_bomber_equipment_3_short:0 "SA-39N Tapien"
+SIA_cv_nav_bomber_equipment_3_desc:0 "An advanced naval bomber modified to launch from and land on aircraft carriers."
+
+# Siamese carrier close air support
+SIA_cv_CAS_equipment_1:0 "Siamese Aeronautics SA-51 Bongkoch"
+SIA_cv_CAS_equipment_1_short:0 "SA-51 Bongkoch"
+SIA_cv_CAS_equipment_1_desc:0 "An early close air support plane modified to launch from and land on aircraft carriers."
+SIA_cv_CAS_equipment_2:0 "Siamese Aeronautics SA-57N Pathum"
+SIA_cv_CAS_equipment_2_short:0 "SA-57N Pathum"
+SIA_cv_CAS_equipment_2_desc:0 "An improved close air support plane modified to launch from and land on aircraft carriers."
+SIA_cv_CAS_equipment_3:0 "Siamese Aeronautics SA-59N Uthumporn"
+SIA_cv_CAS_equipment_3_short:0 "SA-59N Uthumporn"
+SIA_cv_CAS_equipment_3_desc:0 "An advanced close air support plane modified to launch from and land on aircraft carriers."
+
+# Siamese carrier fighter
+SIA_cv_fighter_equipment_0:0 "Siamese Aeronautics SA-4 Chettathirat"
+SIA_cv_fighter_equipment_0_short:0 "SA-4 Chetthathirat"
+SIA_cv_fighter_equipment_0_desc:0 "An early fighter modified to launch from and land on aircraft carriers."
+SIA_cv_fighter_equipment_1:0 "Siamese Aeronautics SA-42 Trailokanat"
+SIA_cv_fighter_equipment_1_short:0 "SA-42 Trailokanat"
+SIA_cv_fighter_equipment_1_desc:0 "An early fighter modified to launch from and land on aircraft carriers."
+SIA_cv_fighter_equipment_2:0 "Siamese Aeronautics SA-43 Phetracha"
+SIA_cv_fighter_equipment_2_short:0 "SA-43 Phetracha"
+SIA_cv_fighter_equipment_2_desc:0 "An improved fighter modified to launch from and land on aircraft carriers."
+SIA_cv_fighter_equipment_3:0 "Siamese Aeronautics SA-46N Rachathirat"
+SIA_cv_fighter_equipment_3_short:0 "SA-46N Rachathirat"
+SIA_cv_fighter_equipment_3_desc:0 "An advanced fighter modified to launch from and land on aircraft carriers."
+
+# Siamese interceptor
+SIA_rocket_interceptor_equipment_1:0 "Siamese Aeronautics SA-200 Withada"
+SIA_rocket_interceptor_equipment_1_desc:0 "Short range experimental interceptor powered by an unreliable chemical rocket engine."
+SIA_rocket_interceptor_equipment_1_short:0 "SA-200 Withada"
+SIA_rocket_interceptor_equipment_2:0 "Siamese Aeronautics SA-220 Prachabodhi"
+SIA_rocket_interceptor_equipment_2_desc:0 "Short range interceptor powered by a slightly more reliable chemical rocket engine."
+SIA_rocket_interceptor_equipment_2_short:0 "SA-220 Prachabodhi"
+SIA_rocket_interceptor_equipment_3:0 "Siamese Aeronautics SA-240S Kamolrart"
+SIA_rocket_interceptor_equipment_3_desc:0 "We have finally worked out most of the problems with the rocket engines and the Rocket Interceptor is now a solid close range defender of facilities."
+SIA_rocket_interceptor_equipment_3_short:0 "SA-240S Kamolrart"
+
+# Siamese jet
+SIA_jet_tac_bomber_equipment_1:0 "Siamese Aeronautics SA-162 Sinthop"
+SIA_jet_tac_bomber_equipment_1_short:0 "SA-162 Sinthop"
+SIA_jet_tac_bomber_equipment_1_desc:0 "The advent of jet fighters necessitates bombers that can outrun or at least match their speed. First-generation medium bombers and bomber-fighters equipped with jet engines will fill this role."
+SIA_jet_tac_bomber_equipment_2:0 "Siamese Aeronautics SA-164 Archanai"
+SIA_jet_tac_bomber_equipment_2_short:0 "SA-164 Archanai"
+SIA_jet_tac_bomber_equipment_2_desc:0 "Not content with speed, future jet bombers will set altitude and range records, delivering payloads and performing reconnaissance on intercontinental missions."
+SIA_jet_strat_bomber_equipment_1:0 "Siamese Aeronautics SA-77 Aiyara"
+SIA_jet_strat_bomber_equipment_1_short:0 "SA-77 Aiyara"
+SIA_jet_strat_bomber_equipment_1_desc:0 "Multiple jet engines allow new designs unprecedented speed while maintaining a large payload and long range. These planes are built for a new era of weapons of mass destruction."
+SIA_jet_fighter_equipment_1:0 "Siamese Aeronautics SA-48 Wisarun"
+SIA_jet_fighter_equipment_1_desc:0 "Previous increases in speed pale in comparison to the introduction of the first jet fighters. While we have yet to learn how to best construct planes for these engines, regular fighter planes cannot compete."
+SIA_jet_fighter_equipment_1_short:0 "SA-140 Wisarun"
+SIA_jet_fighter_equipment_2:0 "Siamese Aeronautics SA-148 Khadesuan"
+SIA_jet_fighter_equipment_2_desc:0 "New swept wing designs and lighter material choices will allow us to extend the range and speed of the revolutionary jet fighters even further."
+SIA_jet_fighter_equipment_2_short:0 "SA-148 Khadesuan"
